[project]
name = "renogy-bt"
version = "0.1.0"
description = "Python library to read Renogy Solar Charge Controllers and Smart Batteries via Bluetooth"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Renogy BT Contributors" }
]
keywords = ["renogy", "solar", "bluetooth", "charge-controller", "battery", "raspberry-pi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware",
]

dependencies = [
    "gatt>=0.2.7",
    "configparser>=5.0.0",
    "requests>=2.25.0",
    "paho-mqtt>=1.6.0",
]

# Note: System packages (dbus-python, pycairo, PyGObject) must be installed
# via system package manager. See README for installation instructions.

[project.urls]
Homepage = "https://github.com/cyrils/renogy-bt"
Repository = "https://github.com/cyrils/renogy-bt"
Issues = "https://github.com/cyrils/renogy-bt/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

# Note: Create venv with --system-site-packages flag to access
# system-installed packages (dbus-python, PyGObject, pycairo)

[tool.hatch.build.targets.wheel]
packages = ["renogybt"]
